--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="footer-container">
 
       <div class="footer-photo">
-        <img src="./images/woman.jpg" alt="Екатерина Марченко">
+        <img src="./images/woman.png" alt="Екатерина Марченко">
       </div>
 
       <div class="footer-info">
@@ -35,7 +35,7 @@
           <ul class="footer-list">
 
             <li class="footer-item">
-              <img src="./images/phone.png" class="footer-icon">
+              <img src="./images/phone.png" alt="phone" class="footer-icon">
               <h2>
               <a class="footer-phone" href="tel:+79191279003">
                 +7 919 127 90 03
@@ -45,28 +45,28 @@
             </li>
 
             <li class="footer-item">
-              <img src="./images/home-phone.png" class="footer-icon">
+              <img src="./images/homephone.png" alt="home-phone" class="footer-icon">
               <a class="footer-page" href="tel:+73517111529">
                 +7 (351) 711-15-29 (доб. 101)
               </a>
             </li>
 
             <li class="footer-item">
-              <img src="./images/vk.png" class="footer-icon">
+              <img src="./images/wk.png" alt="wk" class="footer-icon">
               <a class="footer-page" href="https://vk.com/sun_studio74" target="_blank">
                 sun_studio74
               </a>
             </li>
 
             <li class="footer-item">
-              <img src="./images/maps.png" class="footer-icon">
+              <img src="./images/maps.png" alt="maps" class="footer-icon">
               <span class="footer-text">
                 Троицкий тракт 25 (1 этаж)
               </span>
             </li>
 
             <li class="footer-item">
-              <img src="./images/internet.png" class="footer-icon">
+              <img src="./images/internet.png" alt="internet" class="footer-icon">
               <a class="footer-page" href="https://rpksun.ru" target="_blank">
                 rpksun.ru
               </a>
@@ -77,7 +77,7 @@
       </div>
 
       <div class="footer-logo">
-        <img src="./images/sunstudio.png" alt="Sun Studio">
+        <img src="./images/sunstudi.png" alt="SunStudio">
         <p class="footer-under">ПРОИЗВОДСТВО РЕКЛАМЫ</p>
       </div>
 
